https://bugs.webkit.org/show_bug.cgi?id=73592 REGRESSION (r100483): Can't drag out of background window -and corresponding- <rdar://problem/10508870>

Reviewed by Darin Adler.

If the mouse is pressed we need to do a full, normal hit test even if the window
is not active.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::mouseEvent):
(WebKit::WebPage::mouseEventSyncForTesting):



Canonical link: https://commits.webkit.org/90190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101719 268f45cc-cd09-0410-ab3c-d52691b4dbfc